manifests/workloads/jenkins-oss/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jenkins-ce
  name: jenkins-ce
