manifests/workloads/jenkins-oss/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jenkins.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: jenkins-ce
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ce
  labels:
    app: jenkins-ce
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
  - name: jnlp-agents
    port: 50000
    protocol: TCP
  selector:
    app: jenkins-ce
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-danmanners-cert-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.danmanners.com`)
      kind: Rule
      services:
        - name: jenkins-ce
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-danmanners-cert-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.danmanners.com`)
      kind: Rule
      services:
        - name: jenkins-ce
          port: 8080
  tls:
    secretName: jenkins-danmanners-cert
